ui.TableLineContext: fix z-index for menu
Bug: T169389

--- a/src/ui/styles/ve.ui.TableLineContext.css
+++ b/src/ui/styles/ve.ui.TableLineContext.css
@@ -34,3 +34,7 @@
 	left: -1.2em;
 	border-right: 0;
 }
+
+.ve-ui-tableLineContext-menu {
+	z-index: 2;
+}
